# chcm_config

./: .config.example  .gitignore  Kconfig  README.md  Sconstruct  animation_board_type_map.json  build_render_context.py  config_bin.ld  elf_tool.md  elf_tool.py  extract_excel_json.py  kconfig_to_json.py  main.py  pyproject.toml  render_app_config.py  run_pipeline.py
.codex/skills/chcm-config-workflow/: SKILL.md
.codex/skills/chcm-config-workflow/agents/: openai.yaml
docs/: chcm_config_pipeline.md  elf_tool.md  sons.md
resources/linker/: a_plus_config_bin.ld  a_small_config_bin.ld
resources/templates/: app_config.h.tpl
scripts/: build_render_context.py  elf_tool.py  extract_excel_json.py  kconfig_to_json.py  pipeline_utils.py  render_app_config.py  run_pipeline.py  sign_artifact.py
templates/: README.md  app_config.c.tpl  app_config.h.tpl
