[project]
name = "chcm-config"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.7",
    "kconfiglib>=14.1.0",
    "openpyxl>=3.1.5",
    "pyocd>=0.44.0",
    "scons>=4.10.1",
    "windows-curses>=2.4.1",
]
